welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: ';' expected but 'return' found.
  } return somme/L} 
    ^