welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var L = nums.length
  var somme = 0
  for (i <- 0 to L-1){
    somme = somme + nums(i)
  } return somme/L}